Uploaded Linear Algebra 2

--- a/content/linear_algebra_1.ipynb
+++ b/content/linear_algebra_1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e4bd598b49d72dd088c94bda4e9a11e267a04628d3e007d63c3ad7149e6da37d"
+  "signature": "sha256:4de7c58ee48a110a22e23ade0f08ce56a412f9df09a3b331774ae065465a5281"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -58,6 +58,7 @@
      "collapsed": false,
      "input": [
       "import numpy as np\n",
+      "np.set_printoptions(precision=2)\n",
       "a = np.array([0, -1, 2, 3]).reshape((4,1))\n",
       "b = np.array([4, -2, 0, 5]).reshape((4,1))\n",
       "\n",
@@ -108,12 +109,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-1-09624d81f5ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"a =\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"b =\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"c =\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"Addition\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"---------\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m<ipython-input-4-712811ac5687>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"a =\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"b =\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"c =\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"Addition\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"---------\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
         "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -189,7 +190,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -274,7 +275,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -326,7 +327,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -365,7 +366,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -426,7 +427,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -483,7 +484,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -554,7 +555,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -618,7 +619,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -696,7 +697,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
